# BilliardsGame

./: .gitignore  CMakeLists.txt  main.cpp
include/core/: Game.h
include/objects/: Ball.h  Pocket.h  Table.h
include/physics/: PhysicsWorld.h
src/core/: Game.cpp
src/objects/: Ball.cpp  Pocket.cpp  Table.cpp
src/physics/: PhysicsWorld.cpp
